# SA-Phrase-Search

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  README.md  main.cpp
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  demo
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_basic
examples/: demo.cpp  hlm.txt
include/: andor.hpp  grouped-data.hpp  parser.hpp  sa-is.hpp  sa-match.hpp  sa_is.hpp  sa_match.hpp  string-data.hpp
tests/: CMakeLists.txt  test_basic.cpp
